Login,register api integrated and service api in progress 5

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/language/localization_en.json
     - assets/language/localization_tr.json
     - assets/images/
+    - assets/menu/
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
