--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   latlong2:
   geocoding: ^2.1.0
   mapbox_search:
+  quiver:
+  google_sign_in:
+  flutter_facebook_auth:
+
 
 dev_dependencies:
   flutter_test:
