--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,9 @@ dependencies:
   latlong2:
   geocoding: ^2.1.0
   mapbox_search:
-  quiver:
   google_sign_in:
-  flutter_facebook_auth:
+  flutter_facebook_auth: ^5.0.11
+  firebase_auth: ^4.6.2
 
 
 dev_dependencies:
